corrigiendo errores para que pasen los test